<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settingsAlert"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    
    android:orientation="vertical"
    android:padding="10dp" >

    <CheckBox
        android:id="@+id/soundCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/soundCheckBox" />

    <TextView
        android:id="@+id/cpuDifficultyTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/cpudifficulty"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/cpuRadioGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/easyRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/easy" />

        <RadioButton
            android:id="@+id/mediumRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium" />

        <RadioButton
            android:id="@+id/hardRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hard" />
    </RadioGroup>

</LinearLayout>