<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settings"   
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#282828"
    android:gravity="center|top"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_weight="1" 
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/settingsTitle"
        android:textColor="#fffafa"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/player1Layout"
        android:layout_width="fill_parent"
        android:layout_weight="1"        
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/playerOneEdit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/player1"
            android:inputType="text"
            android:singleLine="true" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/ColourTitle" />
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/player2Layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/playerTwoEdit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/player2"
            android:inputType="text|textPersonName"
            android:singleLine="true" />

  		<TextView
  		    android:id="@+id/computerText"
  		    android:layout_width="fill_parent"
  		    android:layout_height="wrap_content"
  		    android:gravity="center"
  		    android:text="@string/computer"
  		    android:textColor="#fffafa"
  		    android:visibility="gone"
  		    android:paddingBottom="5dp"        
  		    android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/ColourTitle" />
	
	</LinearLayout>

     <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/usingBotCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="playCPUClicked"
                android:text="@string/bot" />

        </LinearLayout>
        
    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="5dp" >

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/small" />

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/large" />
    
    </RadioGroup>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <Button
            android:id="@+id/startGameButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="onButtonClick"
            android:text="@string/startGameButtonText" />

    </LinearLayout>

</LinearLayout>