<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#282828"
    android:gravity="center|top"
    android:orientation="vertical"
    android:paddingLeft="50dp"
    android:paddingRight="50dp" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="20dp"
        android:shadowColor="#fffafa"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="1.5"
        android:text="@string/app_name"
        android:textColor="#fffafa"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/homeImage"
        android:layout_width="fill_parent"
        android:layout_height="154dp"
        android:contentDescription="@string/logoText"
        android:paddingBottom="20dp"
        android:src="@drawable/highreslogo" />

    <Button
        android:id="@+id/newGameButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onButtonClick"
        android:text="@string/newGame" />

    <Button
        android:id="@+id/instructionsButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onButtonClick"
        android:text="@string/instructions" />

    <Button
        android:id="@+id/creditsButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onButtonClick"
        android:text="@string/credits" />

</LinearLayout>