<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#282828"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingBottom="20dp"
            android:text="@string/creditsTitle"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="20sp" />

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"                 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/credittext" />

                   <TextView
                       android:id="@+id/textView3"
                       android:layout_width="fill_parent"
                       android:layout_height="wrap_content"
                       android:layout_gravity="center"
                       android:gravity="center"
                       android:text="@string/mightMiss"
                       android:textStyle="bold" />

                   <TextView
                       android:id="@+id/textView4"
                       android:layout_width="fill_parent"
                       android:layout_height="wrap_content"
                       android:text="@string/thingsmissed" />

            </LinearLayout>
        </ScrollView>
</LinearLayout>